# PasswordCracker

./: .gitignore  GITHUB_METADATA.md  ML_cracker.py  README.md  algorithms.py  bruteForce.py  main.py  pyproject.toml
.github/workflows/: ci.yml
data/wordlists/: README.md  common-passwords-tiny.txt  holdout.txt
experiments/: ml_eval_report.md
passcrack/: __init__.py  benchmark.py  cli.py  hashing.py
passcrack/attacks/: __init__.py  brute.py  dictionary.py  mask.py  rules.py
passcrack/ml/: __init__.py  crack.py  data.py  evaluate.py  generate.py  model.py  train.py
scripts/: fetch_seclists.py
tests/: test_benchmark.py  test_brute.py  test_dictionary.py  test_hashing.py  test_mask.py  test_ml_smoke.py  test_rules.py
